<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">晋城购</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="toast_text">ScrollView下拉刷新完毕</string>
    <string name="load_error">数据加载失败</string>
    <string name="default_search_text">搜索商城商品</string>

     <!-- "关于我们"下的文本 -->
    <string name="check_version">检测更新</string>
    <string name="wifi_auto_update">WIFI下自动下载更新包</string>
    <string name="tel">服务热线:400-114-0880</string>
    <string name="more_aboutus_appname">晋城购 Android客户端</string>
    <string name="more_aboutus_version">版本：3.5.0</string>
    <string name="copyright">Copyright © 20014–2016</string>
    <string name="web">www.m0356.com</string>
    <string name="app_copyright">Copyright © 2014–2017 山西晋城市方舟商园电子商务有限公司, All Rights Reserved</string>
    <string name="app_copyright_jcg">Copyright © 2014–2017 晋城购 All Rights Reserved</string>

    <string name="text_rmb">￥</string>

    <string name="text_sole">手机专享</string>
    <string name="text_groupbuy">团购</string>
     <string name="text_xianshi">限时</string>
     <string name="text_appoint">预约</string>
     <string name="text_fcode">F码</string>
     <string name="text_presell">预售</string>
     <string name="text_virtual">虚拟</string>

      <string name="text_mine_order">我的订单</string>
      <string name="text_mine_vorder">虚拟订单</string>
      <string name="text_mine_fav_goods">收藏商品</string>
      <string name="text_mine_vou">代金券</string>
      <string name="text_mine_address">收货地址</string>
      <string name="text_mine_fav_storeorder">收藏店铺</string>

     <!-- 下拉刷新 -->
     <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_brand">BrandActivity</string>
    <string name="title_activity_register_mobile">RegisterMobileActivity</string>
    <string name="title_activity_register_mobile_step2">RegisterMobileStep2Activity</string>
    <string name="title_activity_register_mobile_step3">RegisterMobileStep3Activity</string>

    <!-- weibo相关 -->
    <string name="weibosdk_demo_obtain_token_via_sso_all_in_one">SSO 授权（ALL IN ONE）</string>
    <string name="weibosdk_demo_obtain_token_via_web">SSO 授权（Web）</string>
    <string name="weibosdk_demo_obtain_token_via_sso">SSO 授权（仅客户端）</string>
    <string name="weibosdk_demo_obtain_token_via_mobile">手机短信注册登录</string>
    <string name="weibosdk_demo_obtain_token_via_signature">Web 授权</string>
    <string name="weibosdk_demo_obtain_token_via_quick_sso">通过微博客户端快速授权</string>
    <string name="weibosdk_demo_obtain_token_via_code">通过 Code 获取 Token</string>
    <string name="weibosdk_demo_obtain_token_logout">用户登出</string>
    <string name="weibosdk_demo_token_info">Token 信息：</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_obtain_token_hint"><b>请注意：</b>\n<li>SSO 登录需要微博客户端的支持，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 Web 授权认证（即第一种认证方式）</li>\n<li>如果您通过方式一和方式二获取不到 Token，而是获取到 code，那说明您的包名和签名存在问题，请到开放平台注册包名和签名。详情请查看 FAQ 文档</li></string>
    <string name="weibosdk_demo_obtain_token_via_sso_hint">使用 SSO 登录前，请检查手机上是否已经安装新浪微博客户端，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 进行认证。</string>
    <string name="weibosdk_demo_obtain_token_via_code_hint"><b>请注意：</b>基于以下几点原因，您可能不想使用前面的两种授权方式：\n<li>出于安全性的考虑，您不信任目前使用应用的包名和签名来获取 Token 的方式</li>\n<li>您不想安装微博客户端</li>\n您可以自行通过 Code 来获取 Token。通过这种方式需要使用到 APP_SECRET，请务必妥善保管好自己的 APP_SECRET，<b>不要直接暴露在程序中，泄露有风险</b>。\n<b>更多细节请查看：</b><a href="http://open.weibo.com/wiki/%E6%8E%88%E6%9D%83%E6%9C%BA%E5%88%B6%E8%AF%B4%E6%98%8E#Web.E5.BA.94.E7.94.A8.E7.9A.84.E9.AA.8C.E8.AF.81.E6.8E.88.E6.9D.83">验证授权步骤</a></string>
    <string name="weibosdk_demo_step_to_obtain_code">第一步：获取 Code</string>
    <string name="weibosdk_demo_step_to_obtain_token">第二步：通过 Code 获取 Token</string>
    <string name="weibosdk_demo_code_text_hint">第一步获取到的 Code：（一次性有效）</string>
    <string name="weibosdk_demo_token_text_hint">第二步获取到的 Token：</string>
    <string name="weibosdk_demo_token_to_string_format">Token：%1$s \nRefresh Token：%2$s \nexpires_in：%3$s</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_obtain_code_success">获取 Code 成功</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">获取 Code 失败</string>
    <string name="weibosdk_demo_toast_obtain_token_success">获取 Token 成功</string>
    <string name="weibosdk_demo_toast_obtain_token_failed">获取 Token 失败</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_image_switch">ImageSwitchActivity</string>
    <string name="title_activity_goods_browse">GoodsBrowseActivity</string>
    <string name="title_activity_virtual_detail">VirtualDetailActivity</string>
    <string name="title_activity_my_asset">MyAssetActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_predeposit">PredepositActivity</string>
    <string name="title_activity_recharge_card_log">RechargeCardLogActivity</string>
    <string name="title_activity_recharge_card_add">RechargeCardAddActivity</string>
    <string name="title_activity_voucher_list">VoucherListActivity</string>
    <string name="title_activity_voucher_password_add">VoucherPasswordAddActivity</string>
    <string name="title_activity_redpacket_list">RedpacketListActivity</string>
    <string name="title_activity_redpacket_password_add">RedpacketPasswordAddActivity</string>
    <string name="title_activity_point_log">PointLogActivity</string>
    <string name="title_activity_bind_mobile">BindMobileActivity</string>
    <string name="title_activity_unbind_mobile">UnbindMobileActivity</string>
    <string name="title_activity_modify_password">ModifyPasswordActivity</string>
    <string name="title_activity_modify_password_step2">ModifyPasswordStep2Activity</string>
    <string name="title_activity_modify_paypwd_step1">ModifyPaypwdStep1Activity</string>
    <string name="title_activity_modify_paypwd_step2">ModifyPaypwdStep2Activity</string>
    <string name="title_activity_store_o2o_address">StoreO2oAddressActivity</string>
    <string name="title_activity_baidu_map">BaiduMapActivity</string>

    <!-- 异常信息 -->
    <string name="network_inavaible">网络连接失败，请检查网络设置</string>
    <string name="network_connect_timeout">网络异常，连接超时</string>
    <string name="data_parser_exception">数据解析异常</string>
    <string name="file_notfound_exception">指定的文件不存在</string>
    <string name="io_exception">文件流异常</string>
    <string name="http_status_code">网络异常，错误码：%d</string>
    <string name="http_exception">网络异常，请求超时</string>
    <string name="socket_exception">网络异常，读取数据超时</string>
    <string name="unknown_exception">内部异常</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_activity_order_wu_liu">OrderWuLiuActivity</string>
    <string name="title_activity_order_exchange">OrderExchangeActivity</string>
    <string name="title_activity_order_goods_tui_money">OrderGoodsTuiMoneyActivity</string>
    <string name="title_activity_order_goods_tui_goods">OrderGoodsTuiGoodsActivity</string>
    <string name="title_activity_order_exchange_list">OrderExchangeListActivity</string>
    <string name="title_activity_order_exchange_control_details">
        OrderExchangeControlDetailsActivity
    </string>
    <string name="title_activity_order_exchange_send_goods">OrderExchangeSendGoodsActivity</string>
    <string name="price_notify">输入的最低价必须小于最高价</string>
    <string name="pay_notice">还需支付%1$s元，请选择以下方式进行支付</string>
    <string name="order_cancel_1">无法备齐货物</string>
    <string name="order_cancel_2">不是有效订单</string>
    <string name="order_cancel_3">买家主动要求</string>
    <string name="order_cancel_4">其他原因</string>


    <!--消息中心-->
    <string name="notice_order_transaction">订单交易通知</string>
    <string name="notice_balance_and_voucher">余额卡券提醒</string>
    <string name="notice_after_sale_service">售后服务消息</string>
    <string name="notice_friends_message">好友消息</string>
    <string name="notice_store_message">店铺消息</string>

    <string name="notice_set_payment_success">付款成功提示</string>
    <string name="notice_set_goods_out">商品出库提示</string>
    <string name="notice_set_redeem_code_expire">兑换码即将到期提醒</string>
    <string name="notice_set_final_payment">预定订单尾款支付提醒</string>
    <string name="notice_set_balance_change">余额变动提醒</string>
    <string name="notice_set_card_change">充值卡余额变动提醒</string>
    <string name="notice_set_apply_voucher">代金券使用提醒</string>
    <string name="notice_set_apply_red_packet">平台红包使用提醒</string>
    <string name="notice_set_voucher_expire">代金券即将到期提醒</string>
    <string name="notice_set_goods_return">退换货消息</string>
    <string name="notice_set_goods_arrive">到货信息通知</string>
    <string name="notice_set_goods_consult_reply">商品咨询回复提示</string>
    <string name="notice_set_platform_consult_reply">平台咨询回复提示</string>

    <!-- 积分中心 -->
    <string name="pc_empiric_to_next_level">还差%1$s分升级到%2$s级会员</string>

</resources>
