<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/nc_bg"
              android:orientation="vertical">

    <include layout="@layout/app_common_header"/>

    <RelativeLayout
        android:id="@+id/rl_"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50.0dip"
            android:contentDescription="TODO"
            android:background="@drawable/logo_about"/>

        <ImageView
            android:id="@+id/iv_bar_code"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_launcher"/>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_bar_code"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#A7A9AC"
                android:textSize="12.0sp"/>

            <TextView
                android:id="@+id/txt_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_aboutus_version"
                android:textColor="#A7A9AC"
                android:textSize="12.0sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_check_up"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/nc_bg_border_bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="26dp"
                    android:text="@string/check_version"
                    android:textColor="@color/nc_black"
                    android:textSize="14dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:scaleType="center"
                    android:src="@drawable/nc_icon_arrow_right"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/nc_bg_border_bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="26dp"
                    android:text="@string/wifi_auto_update"
                    android:textColor="@color/nc_black"
                    android:textSize="14dp"/>

                <ToggleButton
                    android:id="@+id/auto_download_toggle"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:checked="true"
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/toggle_button_bg"/>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btu_feekback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40.0dip"
            android:background="@drawable/add_to_car_button_normal"
            android:padding="10dip"
            android:text="意见反馈"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_copyright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15.0dip"
            android:gravity="center"
            android:text="@string/app_copyright_jcg"
            android:textColor="#6D6D6D"
            android:textSize="10.0sp"/>
    </RelativeLayout>

</LinearLayout>